fix input overlap

--- a/src/index.css
+++ b/src/index.css
@@ -94,6 +94,8 @@ body {
   background: #ffffff;
   box-shadow: 0px 5px 25px rgba(0, 0, 0, 0.25);
   border-radius: 10px;
+  display: flex;
+  align-items: center;
 }
 
 .gradient-1 {
